[package]
authors = ["Christian Duerr <contact@christianduerr.com>", "Joe Wilm <joe@jwilm.com>"]
categories = ["gui", "os"]
description = "Cross platform native font loading and rasterization"
documentation = "https://docs.rs/crossfont"
edition = "2021"
keywords = ["font"]
license = "Apache-2.0"
name = "crossfont"
readme = "README.md"
repository = "https://github.com/alacritty/crossfont.git"
rust-version = "1.65.0"
version = "0.8.0"

[dependencies]
foreign-types = "0.5"
libc = "0.2"
log = "0.4"

[target.'cfg(not(any(target_os = "macos", windows)))'.dependencies]
freetype-rs = "0.26.0"
yeslogic-fontconfig-sys = "5.0.0"

[target.'cfg(not(any(target_os = "macos", windows)))'.build-dependencies]
pkg-config = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"
core-foundation = "0.9.3"
core-foundation-sys = "0.8.4"
core-graphics = "0.23.1"
core-text = "20.1.0"
objc = "0.2.7"
once_cell = "1.12"

[target.'cfg(windows)'.dependencies]
dwrote = {version = "0.11"}
winapi = {version = "0.3", features = ["impl-default"]}
